// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`uses (deploy.uses + provision.uses prod gate) given: [case1] no grant — default block when: [t0] get is run with no grant then: the get output matches snapshot 1`] = `
"🐈 chartin course...

🦺 deploy.uses get
   ├─ local: unset
   ├─ org: unset
   └─ global: not blocked
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case1] no grant — default block when: [t1] the prod gate is checked then: the gate-blocked output matches snapshot 1`] = `
"🐈 wet paws...

🦺 deploy.uses --env prod
   ├─ prod is locked: no deploy.uses grant for prod (safe default)
   └─ ask your human to grant:
        $ rhx deploy.uses set --quant 1 --env prod
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case2] set --quant 1 — one-shot, auto-revoke when: [t0] a human grants 1 prod use then: the set output matches snapshot 1`] = `
"🐈 smooth sailin!

🦺 deploy.uses set
   ├─ granted: 1
   ├─ env: prod
   └─ scope: local (this repo)
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case3] allow — unlimited grant does not revoke when: [t0] a human grants unlimited prod access then: the allow output matches snapshot 1`] = `
"🐈 smooth sailin!

🦺 deploy.uses allow
   ├─ granted: unlimited
   ├─ env: prod
   └─ scope: local (this repo)
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case4] block re-locks after allow when: [t0] a human blocks after a prior allow then: the block output matches snapshot 1`] = `
"🐈 anchors away!

🦺 deploy.uses block
   ├─ revoked (local)
   └─ env: prod
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case8] only humans may grant (TTY guard) when: [t0] a non-human (no TTY) attempts to grant then: the TTY-guard refusal output matches snapshot 1`] = `
"🐈 belay that...

🦺 deploy.uses set
   └─ only humans can run this command
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case9] help is supported when: [t0] help is requested then: deploy.uses help matches snapshot 1`] = `
"🐈 heres the deal...

🦺 deploy.uses — prod gate for deploys (deploy, rollback)

usage:
  rhx deploy.uses get
  rhx deploy.uses set --quant 1 --env prod
  rhx deploy.uses allow --env prod
  rhx deploy.uses block --env prod
  rhx deploy.uses del --env prod
  rhx deploy.uses block --global
  rhx deploy.uses allow --org ehmpathy --env prod

commands:
  get    check state across local/org/global
  set    grant N prod uses (one-shot, auto-revokes)
  allow  grant unlimited prod access
  block  revoke — sets a hard local lock (wins over org policy)
  del    remove local config — defers to org/global (NOT a lock)

note: block and del differ — block locks, del just clears local state.
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case9] help is supported when: [t0] help is requested then: provision.uses help matches snapshot 1`] = `
"🐈 heres the deal...

🦺 provision.uses — prod gate for provisions (terraform, database)

usage:
  rhx provision.uses get
  rhx provision.uses set --quant 1 --env prod
  rhx provision.uses allow --env prod
  rhx provision.uses block --env prod
  rhx provision.uses del --env prod
  rhx provision.uses block --global
  rhx provision.uses allow --org ehmpathy --env prod

commands:
  get    check state across local/org/global
  set    grant N prod uses (one-shot, auto-revokes)
  allow  grant unlimited prod access
  block  revoke — sets a hard local lock (wins over org policy)
  del    remove local config — defers to org/global (NOT a lock)

note: block and del differ — block locks, del just clears local state.
note: only prod writes are gated; reads ('plan') stay open.
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case10] a corrupt grant file fails loud, never a silent default when: [t0] the prod gate reads a corrupt local grant file then: the corrupt-file malfunction output matches snapshot 1`] = `
"🐈 wet paws...

🦺 meter state
   └─ corrupt meter state file: <repo>/.meter/deploy.uses.jsonc
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case11] consumer skills honor the gate — blocked prod exits 2 when: [t0] deploy.sh runs against prod with no grant then: the gate output matches snapshot 1`] = `
"🐈 wet paws...

🦺 deploy.uses --env prod
   ├─ prod is locked: no deploy.uses grant for prod (safe default)
   └─ ask your human to grant:
        $ rhx deploy.uses set --quant 1 --env prod
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case11] consumer skills honor the gate — blocked prod exits 2 when: [t2b] provision.database sync runs against prod then: the gate output matches snapshot 1`] = `
"🐈 wet paws...

🦺 provision.uses --env prod
   ├─ prod is locked: no provision.uses grant for prod (safe default)
   └─ ask your human to grant:
        $ rhx provision.uses set --quant 1 --env prod
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case12] org + global scope command outputs match snapshots when: [t0] org and global policies are set then: get across all scopes matches snapshot 1`] = `
"🐈 chartin course...

🦺 deploy.uses get
   ├─ local: unset
   ├─ org (freeze policy; never grants prod on its own):
   │  ├─ ehmpathy: not frozen
   │  └─ ahbode: frozen (hard stop)
   └─ global: blocked
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case12] org + global scope command outputs match snapshots when: [t0] org and global policies are set then: global block output matches snapshot 1`] = `
"🐈 anchors away!

🦺 deploy.uses block --global
   └─ global: blocked (all repos)
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case12] org + global scope command outputs match snapshots when: [t0] org and global policies are set then: org allow output matches snapshot (never grants prod) 1`] = `
"🐈 smooth sailin!

🦺 deploy.uses allow --org ehmpathy
   ├─ org ehmpathy: freeze lifted (not frozen)
   └─ note: does NOT grant prod — a local grant is still required
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case12] org + global scope command outputs match snapshots when: [t0] org and global policies are set then: org block output matches snapshot (hard freeze) 1`] = `
"🐈 anchors away!

🦺 deploy.uses block --org ahbode
   └─ org ahbode: frozen (hard stop — local allow cannot bypass)
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case14] constraint-error variants are snapped (negative paths) when: [t0] set is called without --env then: it is a constraint error (exit 2) and matches snapshot 1`] = `
"🐈 belay that...

🦺 deploy.uses set
   └─ absent required arg: --env (e.g. --env prod)
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case14] constraint-error variants are snapped (negative paths) when: [t1] set is called without --quant then: it is a constraint error (exit 2) and matches snapshot 1`] = `
"🐈 belay that...

🦺 deploy.uses set
   └─ absent required arg: --quant N (or 'infinite')
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case14] constraint-error variants are snapped (negative paths) when: [t2] set is called with a non-numeric --quant then: it is a constraint error (exit 2) and matches snapshot 1`] = `
"🐈 belay that...

🦺 deploy.uses set
   └─ --quant must be a non-negative integer or 'infinite'
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case14] constraint-error variants are snapped (negative paths) when: [t3] allow --org is called without an org name then: it is a constraint error (exit 2) and matches snapshot 1`] = `
"🐈 belay that...

🦺 deploy.uses allow --org
   └─ absent required arg: --org <name|@all>
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case14] constraint-error variants are snapped (negative paths) when: [t4] an unknown option is passed then: it is a constraint error (exit 2) and matches snapshot 1`] = `
"🐈 belay that...

🦺 deploy.uses
   └─ unknown option: --bogus
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case15] del clears local config — output snapped when: [t0] del is run after a local grant then: it succeeds (exit 0) and matches snapshot 1`] = `
"🐈 anchors away!

🦺 deploy.uses del
   ├─ local config removed for env: prod
   └─ defers to org/global
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case16] provision.uses is its own contract — output snapped when: [t0] provision.uses output variants are exercised then: TTY guard refusal matches snapshot 1`] = `
"🐈 belay that...

🦺 provision.uses set
   └─ only humans can run this command
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case16] provision.uses is its own contract — output snapped when: [t0] provision.uses output variants are exercised then: allow matches snapshot 1`] = `
"🐈 smooth sailin!

🦺 provision.uses allow
   ├─ granted: unlimited
   ├─ env: prod
   └─ scope: local (this repo)
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case16] provision.uses is its own contract — output snapped when: [t0] provision.uses output variants are exercised then: block matches snapshot 1`] = `
"🐈 anchors away!

🦺 provision.uses block
   ├─ revoked (local)
   └─ env: prod
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case16] provision.uses is its own contract — output snapped when: [t0] provision.uses output variants are exercised then: constraint error (absent --env) matches snapshot 1`] = `
"🐈 belay that...

🦺 provision.uses set
   └─ absent required arg: --env (e.g. --env prod)
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case16] provision.uses is its own contract — output snapped when: [t0] provision.uses output variants are exercised then: del matches snapshot 1`] = `
"🐈 anchors away!

🦺 provision.uses del
   ├─ local config removed for env: prod
   └─ defers to org/global
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case16] provision.uses is its own contract — output snapped when: [t0] provision.uses output variants are exercised then: gate-blocked matches snapshot 1`] = `
"🐈 wet paws...

🦺 provision.uses --env prod
   ├─ prod is locked: global freeze in effect
   └─ a human must lift it: rhx provision.uses allow --global
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case16] provision.uses is its own contract — output snapped when: [t0] provision.uses output variants are exercised then: get (unset) matches snapshot 1`] = `
"🐈 chartin course...

🦺 provision.uses get
   ├─ local: unset
   ├─ org: unset
   └─ global: not blocked
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case16] provision.uses is its own contract — output snapped when: [t0] provision.uses output variants are exercised then: global block matches snapshot 1`] = `
"🐈 anchors away!

🦺 provision.uses block --global
   └─ global: blocked (all repos)
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case16] provision.uses is its own contract — output snapped when: [t0] provision.uses output variants are exercised then: org allow matches snapshot (never grants prod) 1`] = `
"🐈 smooth sailin!

🦺 provision.uses allow --org ehmpathy
   ├─ org ehmpathy: freeze lifted (not frozen)
   └─ note: does NOT grant prod — a local grant is still required
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case16] provision.uses is its own contract — output snapped when: [t0] provision.uses output variants are exercised then: set matches snapshot 1`] = `
"🐈 smooth sailin!

🦺 provision.uses set
   ├─ granted: 1
   ├─ env: prod
   └─ scope: local (this repo)
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case17] --gate for-cicd defers the prod gate to CI (the CI-aware path) when: [t0] --gate for-cicd is used inside CI (CI=true) then: the cicd-gate authorization line matches snapshot 1`] = `
"🦺 provision.uses --env prod --gate for-cicd
   └─ authorized via github-environment approval (CI)
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case17] --gate for-cicd defers the prod gate to CI (the CI-aware path) when: [t1] --gate for-cicd is used outside CI (CI absent) then: the cicd-gate belay output matches snapshot 1`] = `
"🐈 belay that...

🦺 provision.uses --env prod --gate for-cicd
   ├─ --gate for-cicd requires the CI environment (CI=true), which is absent
   └─ the cicd gate defers to the github-environment approval; run it in CI
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case17] --gate for-cicd defers the prod gate to CI (the CI-aware path) when: [t3] an invalid --gate value is passed then: the invalid-gate error output matches snapshot 1`] = `
"🐈 belay that...

🦺 uses.check
   ├─ invalid gate: bogus
   └─ must be: for-ehmpath or for-cicd
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case17] --gate for-cicd defers the prod gate to CI (the CI-aware path) when: [t4] the retired --auth as-cicd is passed then: the retired-auth belay output matches snapshot 1`] = `
"🐈 belay that...

🦺 uses.check
   ├─ retired flag: --auth (this skill takes no credential channel)
   ├─ fix: for prod-write approval use --gate for-ehmpath|for-cicd
   └─ note: --auth as-cicd is now --gate for-cicd
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case17] --gate for-cicd defers the prod gate to CI (the CI-aware path) when: [t5] a TRANSPOSED --auth value from a kin skill is passed then: the transposed-auth belay output matches snapshot 1`] = `
"🐈 belay that...

🦺 uses.check
   ├─ retired flag: --auth (this skill takes no credential channel)
   ├─ fix: for prod-write approval use --gate for-ehmpath|for-cicd
   └─ note: --auth as-cicd is now --gate for-cicd
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case17] --gate for-cicd defers the prod gate to CI (the CI-aware path) when: [t6] a TYPO’d flag is passed (--grate for --gate) then: the unknown-flag belay output matches snapshot 1`] = `
"🐈 belay that...

🦺 uses.check
   ├─ unknown flag: --grate
   └─ valid: --meter, --env, --gate
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case17] --gate for-cicd defers the prod gate to CI (the CI-aware path) when: [t7] --gate is passed with NO value (it is the last token) then: the absent-value belay output matches snapshot 1`] = `
"🐈 belay that...

🦺 uses.check
   ├─ absent value for --gate
   ├─ fix: pass one of for-ehmpath, for-cicd
   └─ hint: the skill that composes this gate supplies it
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case17] --gate for-cicd defers the prod gate to CI (the CI-aware path) when: [t8] --gate EATS the next flag as its value then: the swallowed-flag belay output matches snapshot 1`] = `
"🐈 belay that...

🦺 uses.check
   ├─ absent value for --gate
   ├─ fix: pass one of for-ehmpath, for-cicd
   └─ hint: the skill that composes this gate supplies it
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case18] provision.database --gate for-cicd wires the cicd gate through when: [t0] prod apply --gate for-cicd runs inside CI then: the gate-cleared stdout head matches snapshot (volatile tail masked) 1`] = `
"🐈 chartin course...

⛵ provision.database --which livedb --env prod --mode apply
   ├─ which: livedb
   ├─ env: prod
   ├─ mode: apply
   └─ lets get some sun..."
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case18] provision.database --gate for-cicd wires the cicd gate through when: [t1] prod apply --gate for-cicd runs outside CI then: the passthrough belay output matches snapshot 1`] = `
"🐈 belay that...

🦺 provision.uses --env prod --gate for-cicd
   ├─ --gate for-cicd requires the CI environment (CI=true), which is absent
   └─ the cicd gate defers to the github-environment approval; run it in CI
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case19] provision.database rejects a bad --gate when: [t0] an invalid --gate value is passed then: it is a constraint error (exit 2) and matches snapshot 1`] = `
"🐈 belay that...

⛵ provision.database
   ├─ invalid gate: bogus
   └─ must be: for-ehmpath or for-cicd
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case19] provision.database rejects a bad --gate when: [t1] the retired --auth as-cicd is passed then: the retired-auth belay output matches snapshot 1`] = `
"🐈 belay that...

⛵ provision.database
   ├─ retired flag: --auth (this skill declares no credential channel)
   ├─ fix: for prod-write approval use --gate for-ehmpath|for-cicd
   └─ note: --auth as-cicd is now --gate for-cicd
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case19] provision.database rejects a bad --gate when: [t2] a TRANSPOSED --auth value from a kin skill is passed then: the transposed-auth belay output matches snapshot 1`] = `
"🐈 belay that...

⛵ provision.database
   ├─ retired flag: --auth (this skill declares no credential channel)
   ├─ fix: for prod-write approval use --gate for-ehmpath|for-cicd
   └─ note: --auth as-cicd is now --gate for-cicd
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case20] provision.database help documents --gate when: [t0] help is requested then: the help output matches snapshot 1`] = `
"🐈 heres the deal...

⛵ provision.database

usage:
  rhx provision.database --which livedb --env <env> --mode <mode>

options:
  --which  database target: livedb (required)
  --env    environment: prep or prod (required). narrower than the kin skills'
           test|prep|prod|camp on purpose — a live schema exists only in prep
           and prod, so the other envs name no database to reach
  --mode   operation: plan, apply, or sync (required)
  --slug   change slug (required for --mode sync; forbidden otherwise)
  --gate   whose gate clears a PROD write (default: for-ehmpath)
             for-ehmpath  the quota a human granted the agent (local meter)
             for-cicd     the github-environment approval (requires CI=true)

example:
  rhx provision.database --which livedb --env prep --mode plan
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case21] provision.database sync — slug/mode constraint matrix when: [t0] sync is called without --slug then: the constraint output matches snapshot 1`] = `
"🐈 belay that...

⛵ provision.database
   ├─ absent required arg for sync: --slug
   └─ hint: rhx provision.database --which livedb --env prep --mode sync --slug <change-slug>
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case21] provision.database sync — slug/mode constraint matrix when: [t1] --slug is passed with --mode plan then: the constraint output matches snapshot 1`] = `
"🐈 belay that...

⛵ provision.database
   ├─ --slug is only valid with --mode sync (got --mode plan)
   └─ hint: drop --slug, or use --mode sync
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case21] provision.database sync — slug/mode constraint matrix when: [t2] --slug is passed with --mode apply then: the constraint output matches snapshot 1`] = `
"🐈 belay that...

⛵ provision.database
   ├─ --slug is only valid with --mode sync (got --mode apply)
   └─ hint: drop --slug, or use --mode sync
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case21] provision.database sync — slug/mode constraint matrix when: [t4] --mode is mistyped (e.g. snyc) then: the constraint output matches snapshot 1`] = `
"🐈 belay that...

⛵ provision.database
   ├─ invalid mode: snyc
   └─ must be: plan, apply, or sync
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case21] provision.database sync — slug/mode constraint matrix when: [t5] sync is called with a bare --slug (no value) then: the constraint output matches snapshot 1`] = `
"🐈 belay that...

⛵ provision.database
   ├─ absent required arg for sync: --slug
   └─ hint: rhx provision.database --which livedb --env prep --mode sync --slug <change-slug>
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case21] provision.database sync — slug/mode constraint matrix when: [t6] --slug is followed by a flag instead of a value then: the constraint output matches snapshot 1`] = `
"🐈 belay that...

⛵ provision.database
   ├─ absent required arg for sync: --slug
   └─ hint: rhx provision.database --which livedb --env prep --mode sync --slug <change-slug>
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case22] provision.database --gate guards its own value read when: [t0] --gate is the last token, with no value then: the belay output matches snapshot 1`] = `
"🐈 belay that...

⛵ provision.database
   ├─ absent value for --gate
   ├─ fix: pass one of for-ehmpath, for-cicd
   └─ hint: rhx provision.database help
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case22] provision.database --gate guards its own value read when: [t1] --gate is followed by a flag instead of a value then: the belay output matches snapshot 1`] = `
"🐈 belay that...

⛵ provision.database
   ├─ absent value for --gate
   ├─ fix: pass one of for-ehmpath, for-cicd
   └─ hint: rhx provision.database help
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case23] provision.declastruct --gate for-cicd reaches the cicd gate when: [t0] a prod apply --gate for-cicd runs inside CI then: the gate-CLEARED output matches snapshot (temp paths masked) 1`] = `
"🦺 provision.uses --env prod --gate for-cicd
   └─ authorized via github-environment approval (CI)
🐈 belay that...

⛵ provision.declastruct
   ├─ plan not found: <WISH>.plan.json
   └─ hint: run --mode plan first
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case23] provision.declastruct --gate for-cicd reaches the cicd gate when: [t1] the same prod apply runs outside CI then: the gate belay output matches snapshot 1`] = `
"🐈 belay that...

🦺 provision.uses --env prod --gate for-cicd
   ├─ --gate for-cicd requires the CI environment (CI=true), which is absent
   └─ the cicd gate defers to the github-environment approval; run it in CI
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case24] provision.database guards --which/--env/--mode value reads when: [t0] --which is handed --env instead of a value then: the belay output matches snapshot 1`] = `
"🐈 belay that...

⛵ provision.database
   ├─ absent value for --which
   ├─ fix: pass one of livedb
   └─ hint: rhx provision.database help
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case24] provision.database guards --which/--env/--mode value reads when: [t1] --env is handed --mode instead of a value then: the belay output matches snapshot 1`] = `
"🐈 belay that...

⛵ provision.database
   ├─ absent value for --env
   ├─ fix: pass one of prep, prod
   └─ hint: rhx provision.database help
"
`;

exports[`uses (deploy.uses + provision.uses prod gate) given: [case24] provision.database guards --which/--env/--mode value reads when: [t2] --mode is the last token, with no value then: the belay output matches snapshot 1`] = `
"🐈 belay that...

⛵ provision.database
   ├─ absent value for --mode
   ├─ fix: pass one of plan, apply, sync
   └─ hint: rhx provision.database help
"
`;
